--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ header {
 }
 
 h1 {
-    font-size: 50px;
+    font-size: 40px;
     font-weight: bolder;
 }
 
@@ -28,4 +28,13 @@ nav a {
     text-decoration: none;
     font-size: 24px;
     color: black;
+}
+
+.dog-background {
+    width: auto;
+    height: 80vh;
+    border: 1px solid black;
+    background-image: url('./assets/img.png');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
